--- a/src/front/_settings.colors.scss
+++ b/src/front/_settings.colors.scss
@@ -17,6 +17,11 @@ $color-gray--light:      lighten($color-gray, 50%);
 $color-gray--very-light: lighten($color-gray, 60%);
 $color-gray--dark:       darken($color-gray, 15%);
 
+$color-success:         #4BB543;
+$color-danger:          #d9534f;
+
+$color-facebook:        #3b5998;
+$color-google-plus:     #dc4d41;
 
 // Page
 $color-base-background:  #fff;
