--- a/src/front/_objects.box.scss
+++ b/src/front/_objects.box.scss
@@ -46,3 +46,18 @@
 .o-box--huge {
   padding: $unit-huge;
 }
+
+/* Responsive variants
+   ========================================================================== */
+
+.o-box--normal\@tablet {
+  @include mq($from: tablet) {
+    padding: $unit;
+  }
+}
+
+.o-box--large\@tablet {
+  @include mq($from: tablet) {
+    padding: $unit-large;
+  }
+}
