separated form-group from c-form

--- a/src/app.scss
+++ b/src/app.scss
@@ -53,6 +53,7 @@
 @import 'front/components.page-head';
 @import 'front/components.hamburger';
 @import 'front/components.form';
+@import 'front/components.form-group';
 
 
 // UTILITIES
