--- a/src/front/_components.buttons.scss
+++ b/src/front/_components.buttons.scss
@@ -195,7 +195,7 @@ $btn-ghost-border-width: 2px;
   justify-content: center;
   padding: 0;
   margin-left: $unit;
-  box-shadow: inset  0 0 0 $btn-ghost-border-width currentColor;
+  box-shadow: inset 0 0 0 1px currentColor;
   outline: none;
 
   &,
