updated login page

--- a/src/front/_components.buttons.scss
+++ b/src/front/_components.buttons.scss
@@ -188,15 +188,14 @@ $btn-ghost-border-width: 2px;
 
 /* Social buttons
    ========================================================================== */
+$c-btn-social-height: $unit-large;
 
 .c-btn--social {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   padding: 0;
   margin-left: $unit;
-  box-shadow: inset 0 0 0 1px currentColor;
+  box-shadow: inset  0 0 0 1px currentColor;
   outline: none;
+  line-height: $c-btn-social-height;
 
   &,
   &:hover,
@@ -205,17 +204,14 @@ $btn-ghost-border-width: 2px;
     background: none;
   }
 
-  .c-btn__icon {
-    height: $unit-large;
-    margin-left: -$unit;
-    margin-right: auto;
-    flex-shrink: 0;
+  &.c-btn--full {
+    width: calc(100% - #{$c-btn-social-height/2});
   }
 
-  .c-btn__content {
-    padding-left: $unit;
-    padding-right: $unit;
-    width: 100%;
+  .c-btn__icon {
+    float: left;
+    height: $c-btn-social-height;
+    margin-left: -$c-btn-social-height/2;
   }
 }
 
@@ -224,7 +220,7 @@ $btn-ghost-border-width: 2px;
 
   &:hover,
   &:focus {
-    color: darken($color-facebook, 15%);
+    color: $color-facebook--dark;
   }
 }
 
@@ -233,6 +229,6 @@ $btn-ghost-border-width: 2px;
 
   &:hover,
   &:focus {
-    color: darken($color-google-plus, 15%);
+    color: $color-google-plus--dark;
   }
 }
