--- a/src/app.scss
+++ b/src/app.scss
@@ -54,6 +54,7 @@
 @import 'front/components.hamburger';
 @import 'front/components.form';
 @import 'front/components.form-group';
+@import 'front/components.footer';
 
 
 // UTILITIES
@@ -62,3 +63,4 @@
 @import 'front/utilities.responsive-spacings'; 
 @import 'front/utilities.widths';
 @import 'front/utilities.type'; 
+@import 'front/utilities.links'
