added pagination, breadcrumb and select components

--- a/src/app.scss
+++ b/src/app.scss
@@ -55,6 +55,9 @@
 @import 'front/components.form';
 @import 'front/components.form-group';
 @import 'front/components.footer';
+@import 'front/components.pagination';
+@import 'front/components.breadcrumb';
+@import 'front/components.select';
 
 
 // UTILITIES
