--- a/src/front/_utilities.type.scss
+++ b/src/front/_utilities.type.scss
@@ -2,7 +2,7 @@
    #TYPE
    ========================================================================== */
 
-.u-text-banner {
+.u-text-centered {
   text-align: center !important;
 }
 
