--- a/src/front/_settings.colors.scss
+++ b/src/front/_settings.colors.scss
@@ -64,4 +64,15 @@ $color-line:              $color-gray--very-light;
 
 // Footer
 $color-footer-background: $color-brand;
-$color-footer-text:       #fff;    
+$color-footer-text:       #fff;
+
+// Select
+$color-select-text:   $color-gray;
+$color-select-border: $color-gray;
+
+// Pagination
+$color-pagination-text:   $color-brand;
+$color-pagination-border: $color-gray;
+
+// Breadcrumb
+$color-breadcrumb-text:   $color-brand;
