--- a/src/front/_components.buttons.scss
+++ b/src/front/_components.buttons.scss
@@ -22,7 +22,7 @@
   padding: $unit-small $unit;
   transition: $global-transition;
   border-radius: $global-radius;
-  border: 1px solid $color-gray--very-light;
+  border: 1px solid $color-gray--light;
 }
 
 
