--- a/src/front/_utilities.links.scss
+++ b/src/front/_utilities.links.scss
@@ -2,7 +2,7 @@
    #LINKS
    ========================================================================== */
 
-.u-link-hidden {
+.u-link-masked {
     color: inherit !important;
 
     &:hover {
