--- a/src/app.scss
+++ b/src/app.scss
@@ -58,6 +58,7 @@
 @import 'front/components.pagination';
 @import 'front/components.breadcrumb';
 @import 'front/components.select';
+@import 'front/components.field';
 
 
 // UTILITIES
