--- a/src/front/_components.nav-secondary.scss
+++ b/src/front/_components.nav-secondary.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-flow: row nowrap;
   margin: 0; /* [1] */
-  border-bottom: 1px solid $color-gray--very-light;
+  border-bottom: 1px solid $color-gray--light;
 }
 
   .c-nav-secondary__item {
