--- a/src/app.scss
+++ b/src/app.scss
@@ -59,6 +59,7 @@
 @import 'front/components.breadcrumb';
 @import 'front/components.select';
 @import 'front/components.field';
+@import 'front/components.card-wide';
 
 
 // UTILITIES
