--- a/src/front/_components.nav-primary.scss
+++ b/src/front/_components.nav-primary.scss
@@ -178,6 +178,6 @@ $nav-height: $unit-xlarge;
   }
 
   .c-nav-primary__text-item--secondary {
-    font-weight: $font-weight-light;
+    font-weight: $font-weight-thin;
     letter-spacing: 0.25em;
   }
