--- a/src/front/_settings.colors.scss
+++ b/src/front/_settings.colors.scss
@@ -1,8 +1,6 @@
 //* ========================================================================
 //   #COLORS
 //   ======================================================================== */
-// color palette: http://loveyourpalette.com/#/4AA0D5/EB586F/454553/E8ECED/FFFFFF/?_k=lgiqxy
-
 
 $color-brand:            #42AB9E;
 $color-brand--light:     #E1F3EE;
@@ -28,39 +26,32 @@ $color-google-plus--dark: darken($color-google-plus, 15%);
 // Page
 $color-base-background:  #fff;
 
-
 // Buttons
-$color-btn:                  $color-brand;
-$color-btn--hover:           $color-brand--dark;
+$color-btn:                  $color-accent;
+$color-btn--hover:           $color-accent--dark;
 
 $color-btn-secondary:        $color-accent;
 $color-btn-secondary--hover: $color-accent--dark;
 
 $color-btn-secondary:        $color-accent;
 $color-btn-secondary--hover: $color-accent--dark;
-
 
 // Text     
-$color-text:         $color-gray--dark;
-
+$color-text:         $color-gray;
 
 // Links    
-$color-link:              $color-brand;
-$color-link--hover:       $color-brand--dark;
-
+$color-link:         $color-brand;
+$color-link--hover:  $color-brand--light;
 
 // Icons
-$color-icon:              $color-gray--dark;
-
+$color-icon:         $color-gray--dark;
 
 // Panel
-$color-panel-border:      $color-gray--light;
-
+$color-panel-border: $color-gray--light;
 
 // Horizontal rule
-$color-line:              $color-gray--light;     
+$color-line:         $color-gray--light;
 
 // Footer
 $color-footer-background: $color-brand;
-$color-footer-text:       #fff;
-
+$color-footer-text:       $color-gray--light;
