--- a/src/front/_settings.global.scss
+++ b/src/front/_settings.global.scss
@@ -3,30 +3,20 @@
 //   ======================================================================== */
 
 // Fonts
-// https://bitsofco.de/the-new-system-font-stack/
-$system-font: Lato,
-              -apple-system,
-              BlinkMacSystemFont,
-              "Segoe UI",
-              Roboto,
-              Oxygen,
-              Ubuntu,
-              Cantarell,
-              "Open Sans",
-              "Helvetica Neue",
-              sans-serif;
+$global-font: Lato, sans-serif;
 
 $global-font-size:    16px;
 $global-line-height:  24px;
 
-$font-weight-light:   300;
+$font-weight-thin:    300;
 $font-weight-regular: 400;
 $font-weight-bold:    700;
 
-$global-radius:       1px;
+$global-radius:       2px;
+$global-shadow:       0 0 10px 0 rgba(0,0,0,0.4);
 
-$global-transition:      all 300ms ease-in-out;
-$global-transition-fast: all 150ms ease-in-out;
+$global-transition:      all 0.3s;
+$global-transition-fast: all 0.15s;
 
 $unit-factor-tiny :  0.25;
 $unit-factor-small:  0.5;
