--- a/src/front/_utilities.headings.scss
+++ b/src/front/_utilities.headings.scss
@@ -13,18 +13,22 @@
 
 .u-h1 {
   @include inuit-font-size($inuit-font-size-h1, $important: true);
+  font-weight: $font-weight-regular;
 }
 
 .u-h2 {
   @include inuit-font-size($inuit-font-size-h2, $important: true);
+  font-weight: $font-weight-regular;
 }
 
 .u-h3 {
   @include inuit-font-size($inuit-font-size-h3, $important: true);
+  font-weight: $font-weight-regular;
 }
 
 .u-h4 {
   @include inuit-font-size($inuit-font-size-h4, $important: true);
+  font-weight: $font-weight-regular;
 }
 
 .u-h5 {
