--- a/src/front/_settings.colors.scss
+++ b/src/front/_settings.colors.scss
@@ -23,6 +23,9 @@ $color-facebook--dark:    darken($color-facebook, 15%);
 $color-google-plus:       #dc4d41;
 $color-google-plus--dark: darken($color-google-plus, 15%);
 
+$color-twitter:           #1da1f3;
+$color-twitter--dark:     darken($color-twitter, 15%);
+
 // Page
 $color-base-background:  #fff;
 
