--- a/src/front/_settings.global.scss
+++ b/src/front/_settings.global.scss
@@ -3,7 +3,8 @@
 //   ======================================================================== */
 
 // Fonts
-$global-font: Lato, sans-serif;
+$global-font:           Lato, sans-serif;
+$global-font-secondary: Merriweather, serif;
 
 $global-font-size:    16px;
 $global-line-height:  24px;
