added card component

--- a/src/app.scss
+++ b/src/app.scss
@@ -38,6 +38,7 @@
 @import 'front/objects.media';
 @import 'front/objects.pack';
 @import 'front/objects.wrappers';
+@import 'front/objects.ratio';
 
 
 // COMPONENTS
@@ -63,6 +64,7 @@
 @import 'front/components.card-wide';
 @import 'front/components.article';
 @import 'front/components.avatar';
+@import 'front/components.card';
 
 
 // UTILITIES
